对链接样式BUG的更正

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -61,7 +61,7 @@
         <div id="icons">
             <ul class="am-nav am-nav-pills">
                 <li><a href="https://github.com/cn-stdio" class="card-icons"><i class="fa fa-github" title="活跃不起来滴小github~"></i></a></li>
-                <li><a href="#" class="https://gitee.com/Seaguller"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
+                <li><a href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
                 <li><a href="#" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
                 <li><a href="#" class="card-icons"><i class="fa fa-weixin" title="哇~似微信滴二维码耶！"></i></a></li>
                 <li><a href="#" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
