--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,11 +60,16 @@
         <hr id="hr-one"/>
         <div id="icons">
             <ul class="am-nav am-nav-pills">
-                <li><a href="https://github.com/cn-stdio" class="card-icons"><i class="fa fa-github" title="活跃不起来滴小github~"></i></a></li>
-                <li><a href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
-                <li><a href="#" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
-                <li><a href="#" class="card-icons"><i class="fa fa-weixin" title="哇~似微信滴二维码耶！"></i></a></li>
-                <li><a href="#" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
+                <li><a target="_blank" href="https://github.com/cn-stdio" class="card-icons"><i class="fa fa-github" title="活跃不起来滴小github~"></i></a></li>
+                <li><a target="_blank" href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
+                <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1656299466&site=qq&menu=yes" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
+                <li><a href="javascript:void(0);" class="card-icons"><i class="fa fa-weixin" title="哇~似微信滴二维码耶！">
+                    <div class="card-weixin-divout">
+                        <div class="card-weixin-divin"></div>
+                        <img src="../static/img/weixin.gif" id="weixin-img"/>
+                    </div>
+                </i></a></li>
+                <li><a target="_blank" href="https://weibo.com/p/1005053269816883" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
             </ul>
         </div>
     </div>
@@ -85,5 +90,7 @@
     <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
     <!-- 主页JS -->
     <script src="../static/js/main.js" type="text/javascript"></script>
+    <!-- 背景线条 -->
+    <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
 </body>
 </html>
