--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,10 @@
 body {
     font-size: 14px;
+    cursor: url(../cursor/coco.cur),url(../cursor/coco.gif),auto;
 }
-
+a:hover {
+    cursor: url(../cursor/coco-link.cur),url(../cursor/coco-link.gif),auto;
+}
 /* 标题栏随滚动隐藏 */
 .animated {position: fixed;top: 0;left: 0;right: 0;transition: all .2s ease-in-out;}
 .slideUp {top: -100px;}
@@ -151,6 +154,19 @@ header.am-topbar.am-topbar-inverse.am-topbar-fixed-top {
     border:1px solid #BFBFBF;
     width: 315px;
     height: 330px;
+}
+/* 标签云（未完成） */
+.main-right-down {
+    position: absolute;
+    left: 1070px;
+    top: 1040px;
+    padding: 15px 0;
+    box-shadow: 0px 0px  10px 0.5px #aaa;
+    border:1px solid #BFBFBF;
+    width: 315px;
+    height: 330px;
+
+    display: none;
 }
 .main-middle {
     position: absolute;
