--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>喵喵喵喵喵帕斯~~~~~！</title>
+    <title>Seaguller的小窝~</title>
     <link href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
-    <link href="../static/css/main.css" rel="stylesheet" >
+    <link href="../static/css/main.css" rel="stylesheet" />
     <link rel="stylesheet" href="http://dreamsky.github.io/main/blog/common/init.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../static/live2d/css/waifu.css" />
+    <link href="../static/css/article.css" rel="stylesheet"/>
+
+
 </head>
 <body>
     <!-- 主页大图 -->
@@ -17,6 +21,7 @@
                 <div class="am-container">
                     <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse-4">
                         <ul class="am-nav am-nav-pills am-topbar-nav">
+                            <h1 id="header-text">Seaguller的小窝~</h1>
                             <li class="am-active">
                                 <a href="#" class="header-a-main" id="header-a-main-one">
                                     <span class="am-icon-home">&nbsp;首&nbsp;&nbsp;页</span>
@@ -64,22 +69,88 @@
                 <li><a target="_blank" href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
                 <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1656299466&site=qq&menu=yes" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
                 <li><a href="javascript:void(0);" class="card-icons"><i class="fa fa-weixin" title="哇~似微信滴二维码耶！">
-                    <div class="card-weixin-divout">
-                        <div class="card-weixin-divin"></div>
-                        <img src="../static/img/weixin.gif" id="weixin-img"/>
-                    </div>
                 </i></a></li>
                 <li><a target="_blank" href="https://weibo.com/p/1005053269816883" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
             </ul>
+            <div class="card-weixin-divout">
+                <div class="card-weixin-divin"></div>
+                <img src="../static/img/weixin.gif" id="weixin-img"/>
+            </div>
+
         </div>
     </div>
     <!-- 标签云（未完成） -->
     <div class="main-right-down"></div>
-    <div class="main-middle">
+    <div class="main-middle" id="main-middle-1">
+        <!-- 样板测试，写完后台后删掉（调用后台） -->
+        <div class="main-middle-article">
+            <div class="article-badge">
+                    <a href="#" class="badge-a">臭不要脸</a>
+            </div>
+            <h1 class="article-title">
+                <a class="article-title-link" href="#">
+                    宇宙超级无敌玉树临风温柔体贴第一大帅哥的第一篇文章
+                </a>
+            </h1>
+            <div class="article-meta">
+                    <span class="am-icon-calendar"></span><span class="meta-text meta-calendar-text">2018-12-16</span>
+                    <span class="am-icon-user"></span><span class="meta-text meta-user-text">Seaguller</span>
+                    <span class="am-icon-eye"></span><span class="meta-text meta-eye-text">666</span>
+            </div>
+            <div class="article-content">
+                嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤……
+            </div>
+            <div class="article-button">
+                <a class="article-btn" href="#">阅读全文 »</a>
+            </div>
 
+        </div>
+    </div>
+    <div class="main-middle" id="main-middle-2">
+        <!-- 样板测试，写完后台后删掉（调用后台） -->
+        <div class="main-middle-article">
+            <div class="article-badge">
+                <a href="#" class="badge-a">臭不要脸</a>
+            </div>
+            <h1 class="article-title">
+                <a class="article-title-link" href="#">
+                    宇宙超级无敌玉树临风温柔体贴第一大帅哥的第二篇文章
+                </a>
+            </h1>
+            <div class="article-meta">
+                <span class="am-icon-calendar"></span><span class="meta-text meta-calendar-text">2018-12-16</span>
+                <span class="am-icon-user"></span><span class="meta-text meta-user-text">Seaguller</span>
+                <span class="am-icon-eye"></span><span class="meta-text meta-eye-text">666</span>
+            </div>
+            <div class="article-content">
+                嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤……
+            </div>
+            <div class="article-button">
+                <a class="article-btn" href="#">阅读全文 »</a>
+            </div>
+
+        </div>
     </div>
     <div class="main-left">
+        <i class="fa fa-quote-left" style="float: left"></i><br/>
+        <div class="main-left-text">
+            <p id="left-pp">你应该要学着做你自己</p>
+            <p>面对真实的自我</p>
+            <p>只要做到这一点</p>
+            <p>你就什么都不用惧怕</p>
+            <p id="left-pp-last">--- 《猫的报恩》</p>
+        </div>
+        <i class="fa fa-quote-right" style="float: right"></i>
+        <div class="main-left-last-text">
+            <div id="main-left-last-text-one">无论夜晚多么黑暗，</div>
+            <div id="main-left-last-text-two">黎明总会如约而至。</div>
+        </div>
+    </div>
+    <span class="tete">血小板</span>
 
+    <div class="waifu ">
+        <div class="waifu-tips" style="opacity:0"></div>
+        <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
     </div>
 
     &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
@@ -96,5 +167,24 @@
     <script src="../static/js/main.js" type="text/javascript"></script>
     <!-- 背景线条 -->
     <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
+
+    <script type="text/javascript" src="../static/live2d/js/live2d.js"></script>
+    <script type="text/javascript" src="../static/live2d/js/waifu.js"></script>
+    <script type="text/javascript">
+        loadlive2d("live2d", "../static/live2d/model/kesshouban/model.json");
+    </script>
+    <script type="text/javascript">
+        /* 微信翻转 */
+        $(".fa-weixin").mouseover(function () {
+            $(".card-weixin-divout").css("display", "block");
+            $(".card-weixin-divin").css("display", "block");
+            $("#weixin-img").css("display", "block");
+        });
+        $(".fa-weixin").mouseout(function () {
+            $(".card-weixin-divout").css("display", "none");
+            $(".card-weixin-divin").css("display", "none");
+            $("#weixin-img").css("display", "none");
+        });
+    </script>
 </body>
 </html>
