--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="../static/live2d/css/waifu.css" />
     <link href="../static/css/article.css" rel="stylesheet"/>
 
-
 </head>
 <body>
+<div id="main-class-text">
     <!-- 主页大图 -->
     <div ><img id="table-picture" src="../static/img/003.png"/></div>
     <!-- 标题栏 -->
@@ -21,18 +21,18 @@
                 <div class="am-container">
                     <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse-4">
                         <ul class="am-nav am-nav-pills am-topbar-nav">
-                            <h1 id="header-text">Seaguller的小窝~</h1>
-                            <li class="am-active">
-                                <a href="#" class="header-a-main" id="header-a-main-one">
+                            <a id="header-text" href="/">Seaguller的小窝~</a>
+                            <li class="am-active" id="li-main">
+                                <a href="/" class="header-a-main" id="header-a-main-one">
                                     <span class="am-icon-home">&nbsp;首&nbsp;&nbsp;页</span>
                                 </a>
                             </li>
-                            <li><a href="#" class="header-a-main"><span class="am-icon-archive">&nbsp;归&nbsp;&nbsp;档</span></a></li>
-                            <li><a href="#" class="header-a-main"><span class="am-icon-calendar-plus-o">&nbsp;更&nbsp;&nbsp;新</span></a></li>
-                            <li><a href="#" class="header-a-main"><span class="am-icon-music">&nbsp;音乐馆</span></a></li>
-                            <li><a href="#" class="header-a-main"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
-                            <li><a href="#" class="header-a-main"><span class="am-icon-mars">&nbsp;后&nbsp;&nbsp;宫</span></a></li>
-                            <li><a href="#" class="header-a-main"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
+                            <li id="li-archive"><a href="/archive" class="header-a-main" id="header-a-main-archive"><span class="am-icon-archive">&nbsp;归&nbsp;&nbsp;档</span></a></li>
+                            <li id="li-update"><a href="#turn-head" class="header-a-main" id="header-a-main-update"><span class="am-icon-calendar-plus-o">&nbsp;更&nbsp;&nbsp;新</span></a></li>
+                            <li id="li-music"><a href="#turn-head" class="header-a-main" id="header-a-main-music"><span class="am-icon-music">&nbsp;音乐馆</span></a></li>
+                            <li id="li-message"><a href="#turn-head" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
+                            <li id="li-friends"><a href="#turn-head" class="header-a-main" id="header-a-main-friends"><span class="am-icon-mars">&nbsp;后&nbsp;&nbsp;宫</span></a></li>
+                            <li id="li-aboutMe"><a href="#turn-head" class="header-a-main" id="header-a-main-aboutMe"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
 
                         </ul>
                     </div>
@@ -40,49 +40,61 @@
             </header>
     </div>
     <!-- 文字喵 -->
-    <h1 id="headline" class="head-picture-font">喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
+    <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
     <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
     <div class="main-right" id="main-right-div">
-        <div class="card-head">
-            <div class="card-my-head">
-                <div class="head-card-img-div">
-                    <div class="card-head-left-img">
-                        <img src="../static/img/123.png" id="head-card-img"/>
+
+        <!-- 名片目录，点进文章的时候再加进去 -->
+        <div id="right-catalog-div">
+            <!--<ul class="right-catalog">
+                <li class="right-catalog-article right-catalog-style">文章目录</li>
+                <li class="right-catalog-user">作者信息</li>
+            </ul>-->
+        </div>
+
+        <div id="main-right-text">
+            <div class="card-head">
+                <div class="card-my-head">
+                    <div class="head-card-img-div">
+                        <div class="card-head-left-img">
+                            <img src="../static/img/123.png" id="head-card-img"/>
+                        </div>
+                    </div>
+                    <div class="card-head-right-word">
+                        <h1 id="head-card-right-h">Seaguller</h1>
+                        <small class="card-head-right-writing">如果你自己都放弃自己了，还有谁会救你？</small>
                     </div>
                 </div>
-                <div class="card-head-right-word">
-                    <h1 id="head-card-right-h">Seaguller</h1>
-                    <small class="card-head-right-writing">如果你自己都放弃自己了，还有谁会救你？</small>
+            </div>
+            <div class="card-middle">
+                扣扣~：1656299466<br/>
+                微信~：xy554322260
+            </div>
+            <hr id="hr-one"/>
+            <div id="icons">
+                <ul class="am-nav am-nav-pills">
+                    <li><a target="_blank" href="https://github.com/cn-stdio" class="card-icons"><i class="fa fa-github" title="活跃不起来滴小github~"></i></a></li>
+                    <li><a target="_blank" href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
+                    <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1656299466&site=qq&menu=yes" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
+                    <li><a href="javascript:void(0);" class="card-icons"><i class="fa fa-weixin">
+                    </i></a></li>
+                    <li><a target="_blank" href="https://weibo.com/p/1005053269816883" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
+                </ul>
+                <div class="card-weixin-divout">
+                    <div class="card-weixin-divin"></div>
+                    <img src="../static/img/weixin.gif" id="weixin-img"/>
                 </div>
             </div>
         </div>
-        <div class="card-middle">
-            扣扣~：1656299466<br/>
-            微信~：xy554322260
-        </div>
-        <hr id="hr-one"/>
-        <div id="icons">
-            <ul class="am-nav am-nav-pills">
-                <li><a target="_blank" href="https://github.com/cn-stdio" class="card-icons"><i class="fa fa-github" title="活跃不起来滴小github~"></i></a></li>
-                <li><a target="_blank" href="https://gitee.com/Seaguller" class="card-icons"><i class="fa fa-gg" title="码码码码码云~"></i></a></li>
-                <li><a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1656299466&site=qq&menu=yes" class="card-icons"><i class="fa fa-qq" title="点击QQ联系俺~"></i></a></li>
-                <li><a href="javascript:void(0);" class="card-icons"><i class="fa fa-weixin" title="哇~似微信滴二维码耶！">
-                </i></a></li>
-                <li><a target="_blank" href="https://weibo.com/p/1005053269816883" class="card-icons"><i class="fa fa-weibo" title="基本不碰的小微博~"></i></a></li>
-            </ul>
-            <div class="card-weixin-divout">
-                <div class="card-weixin-divin"></div>
-                <img src="../static/img/weixin.gif" id="weixin-img"/>
-            </div>
 
-        </div>
     </div>
     <!-- 标签云（未完成） -->
     <div class="main-right-down"></div>
+    <!-- 主体内容 -->
     <div id="art-list">
 
     </div>
@@ -155,8 +167,6 @@
             <div id="main-left-last-text-two">黎明总会如约而至。</div>
         </div>
     </div>
-    <span class="tete">血小板</span>
-
     <div class="waifu ">
         <div class="waifu-tips" style="opacity:0"></div>
         <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
@@ -165,7 +175,7 @@
     &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
     &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
     &nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>&nbsp;<br/>
-
+</div>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
     <!-- 字体阴影特效 -->
