更新了归档的后台跳转与页面右栏

--- a/src/main/resources/templates/archive.html
+++ b/src/main/resources/templates/archive.html
@@ -48,7 +48,6 @@
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
     <div class="main-right" id="main-right-div">
-
         <!-- 名片目录，点进文章的时候再加进去 -->
         <div id="right-catalog-div">
             <ul class="right-catalog">
@@ -57,6 +56,7 @@
             </ul>
         </div>
 
+        <!-- 作者信息，点击时加入 -->
         <div id="main-right-text"></div>
 
     </div>
